# polimorf

./: package.yaml  polimorf.cabal  polish-language-resources.cabal
Data/: PoliMorf.hs
Text/: PoliMorf.hs  Prolexbase.hs
Text/LMF/: Hist.hs  Named.hs
src/Data/: PoliMorf.hs
